# llamafarm

./: .cursorrules  .gitignore  .release-please-manifest.json  AGENTS.md  CHANGELOG.md  README.md  lf  project.json  start-local.sh  test-arm64-builds.sh
.agents/commands/: commit.md  describe_pr.md  founder_mode.md  github_issues.md  plan.md  research.md
.agents/rules/: cli.mdc  formatting.mdc
.claude/: CLAUDE.md
.claude/RAG/: CLAUDE.md
.cursor/: mcp.json
.github/workflows/: ci.yml  cli-release.yml  cli.yml  desktop.yml  docker.yml  e2e.yml  pyapp.yml  (+5 more)
cli/: README.md  go.mod  go.sum  project.json
common/: README.md  pyproject.toml
common/llamafarm_common/: __init__.py  model_utils.py
common/tests/: __init__.py  test_model_utils.py
config/: README.md  compile_schema.py  datamodel.py  generate-go-types.sh  generate-types.sh  project.json  pyproject.toml  schema.yaml  validators.py
designer/: Dockerfile  package-lock.json  package.json  project.json  vite.config.ts
electron-app/: package-lock.json  package.json  sign-windows.js
examples/: README.md  validate_examples.sh
observability/: __init__.py  config_versioning.py  event_logger.py  helpers.py  path_utils.py
prompts/: README.md
rag/: Dockerfile  README.md  api.py  celery_app.py  check_rag_tasks.sh  cli.py  default_strategies.yaml  main.py  project.json  pyproject.toml  schema.yaml  test_parser_debug.py  test_retrieval_debug.py
runtime/: Dockerfile
scripts/: build_examples_manifest.py  package-source.sh
server/: Dockerfile  main.py  project.json  pyproject.toml
test/: README.md
(+663 files in other folders)
